<resources>
    <string name="app_name">Lutemon</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="name">Name</string>
    <string name="give_me_epic_name">Can give a name here</string>
    <string name="example">1: Pink(Pinky) att: 7; def: 2; exp:0; health: 18/18\n 2: Black(Black Knight) att: 9; def: 0; exp:0; health: 16/16\n Pink(Pinky) attacks Black(Black Knight)\n Black(Black Knight) manages to escape death.\n 2: Black(Black Knight) att: 9; def: 0; exp:0; health: 9/16\n 1: Pink(Pinky) att: 7; def: 2; exp:0; health: 18/18\n Black(Black Knight) attacks Pink(Pinky)\n Pink(Pinky) manages to escape death.\n 1: Pink(Pinky) att: 7; def: 2; exp:0; health: 11/18\n 2: Black(Black Knight) att: 9; def: 0; exp:0; health: 9/16\n Pink(Pinky) attacks Black(Black Knight)\n Black(Black Knight) manages to escape death.\n ....</string>
    <string name="home">HOME</string>
    <string name="transfer">TRANSFER</string>
    <string name="train">TRAIN</string>
    <string name="battle">BATTLE</string>
    <string name="content_description">blue</string>
    <string name="create_new_lutemon">CREATE NEW LUTEMON</string>
    <string name="list">LIST</string>
    <string name="sort">SORT</string>
    <string name="battle_field">Battle Field</string>
    <string name="train_field">Train Field</string>
    <string name="select_lutemons_to_transfer_to">Select lutemons to transfer to</string>
    <string name="something">something</string>
    <string name="start_train">start train</string>
    <string name="default_message_for_train">start train and see the result here</string>
    <string name="default_message_for_battle">please select lutemons and start battle!!</string>
    <string name="select_a_lutemon_to_train">Select a lutemon to train</string>
    <string name="reset_db">RESET DB</string>
    <string name="sort_by_color">SORT BY COLOR</string>
    <string name="sort_by_xp">SORT BY XP</string>
    <string name="select_an_opponent_to_train_with">Select an opponent to train with</string>
    <string name="select_orange_lutemon">select orange lutemon</string>
    <string name="select_black_lutemon">select black lutemon</string>
    <string name="select_pink_lutemon">select pink lutemon</string>
    <string name="select_green_lutemon">select green lutemon</string>
    <string name="select_white_lutemon">select white lutemon</string>
</resources>