<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ht.lutemon.ListActivity">
    <item
        android:id="@+id/action_home"
        android:icon="@mipmap/icons8home48"
        android:orderInCategory="0"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_sort_by_COLOR"
        android:orderInCategory="0"
        android:title="@string/sort_by_color"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_by_XP"
        android:orderInCategory="0"
        android:title="@string/sort_by_xp"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_deleteAll"
        android:title="@string/reset_db"
        app:showAsAction="ifRoom" />
</menu>