<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding="10dp"
tools:context=".TrainActivity">

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.3" />

    <LinearLayout
        android:id="@+id/layoutForTrainLutemons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#DBEDEB"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_a_lutemon_to_train"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioGroup
                android:id="@+id/radioGroupTrain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </RadioGroup>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#FAFBFB"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_an_opponent_to_train_with"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_create"
                android:layout_gravity="center"
                android:contentDescription="@string/something"
                android:layout_weight="1"
                app:srcCompat="@mipmap/white" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_create"
                android:layout_gravity="center"
                android:contentDescription="@string/something"
                android:layout_weight="1"
                app:srcCompat="@mipmap/green_back" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_create"
                android:layout_gravity="center"
                android:contentDescription="@string/something"
                android:layout_weight="1"
                app:srcCompat="@mipmap/pink_back" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_create"
                android:layout_gravity="center"
                android:contentDescription="@string/something"
                android:layout_weight="1"
                app:srcCompat="@mipmap/oragne_back" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_create"
                android:layout_gravity="center"
                android:contentDescription="@string/something"
                android:layout_weight="1"
                app:srcCompat="@mipmap/black_back" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/radioGroupOpponents"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/select_white_lutemon"
                android:button="@null"
                android:drawableTop="?android:attr/listChoiceIndicatorSingle" />

            <RadioButton
                android:id="@+id/Green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/select_green_lutemon"
                android:button="@null"
                android:drawableTop="?android:attr/listChoiceIndicatorSingle" />

            <RadioButton
                android:id="@+id/Pink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/select_pink_lutemon"
                android:button="@null"
                android:drawableTop="?android:attr/listChoiceIndicatorSingle" />

            <RadioButton
                android:id="@+id/Orange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/select_orange_lutemon"
                android:button="@null"
                android:drawableTop="?android:attr/listChoiceIndicatorSingle" />

            <RadioButton
                android:id="@+id/Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/select_black_lutemon"
                android:button="@null"
                android:drawableTop="?android:attr/listChoiceIndicatorSingle" />
        </RadioGroup>

        <Button
            android:id="@+id/btnStartTrain"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:text="@string/start_train" />

        <TextView
            android:id="@+id/tvTrainResult"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="#F6FAF5"
            android:lineSpacingMultiplier="1.2"
            android:gravity="center"
            android:text="@string/default_message_for_train"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>