<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransferFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/something"
            android:background="#F6F5F5">
            <LinearLayout
                android:id="@+id/linearLayoutForList"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

            </LinearLayout>
        </ScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/select_lutemons_to_transfer_to"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="italic" />

        <RadioGroup
            android:id="@+id/radioGroupField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp">

        </RadioGroup>

        <Button
            android:id="@+id/buttonTransfer"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/transfer" />
    </LinearLayout>

</FrameLayout>
